Can publish a message

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Miguel Coronel",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "express": "^4.17.1",
-    "http-errors": "~1.6.3"
+    "http-errors": "~1.6.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
